# GrowattPublicApiPy

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_publish.yaml
examples/: min_data.py  nexa_data.py  ongoing.py  ongoing_test-server.py  test-server.py  test-server_v4.py
growatt_public_api/: __init__.py  growatt_api.py  growatt_types.py
growatt_public_api/api_v4/: __init__.py  api_v4.py
growatt_public_api/datalogger/: __init__.py  datalogger.py
growatt_public_api/device/: __init__.py  device.py
growatt_public_api/env_sensor/: __init__.py  env_sensor.py
growatt_public_api/groboost/: __init__.py  groboost.py
growatt_public_api/hps/: __init__.py  hps.py
growatt_public_api/inverter/: __init__.py  inverter.py
growatt_public_api/max/: __init__.py  max.py
growatt_public_api/min/: __init__.py  min.py
growatt_public_api/noah/: __init__.py  noah.py
growatt_public_api/pbd/: __init__.py  pbd.py
growatt_public_api/pcs/: __init__.py  pcs.py
growatt_public_api/plant/: __init__.py  plant.py
growatt_public_api/pydantic_models/: __init__.py  api_model.py  api_v4.py  device.py  env_sensor.py  groboost.py  hps.py  inverter.py  max.py  min.py  noah.py  pbd.py  (+8 more)
tests/: get_test_devices.py  test_apiv4.py  test_datalogger.py  test_device.py  test_env_sensor.py  test_groboost.py  test_hps.py  test_inverter.py  test_max.py  test_min.py  test_noah.py  test_pbd.py  test_pcs.py  test_plant.py  test_smart_meter.py  test_spa.py  test_sph.py  test_sphs.py  test_storage.py  test_user.py  test_vpp.py  test_wit.py
(+18 files in other folders)
