[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "growatt_public_api"
version = "2025.07.14"
authors = [
  { name="Timo Hencken", email="github@hencken.de" },
]
description = "Python implementation of Growatt public REST API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "loguru>0.7",
  "truststore>=0.10.1",
  "pydantic>=2.0,<2.9", # stay compatible with homeassistant_api which currently requires >=2.0,<2.9",
  "requests>=2.27.1,<3.0.0", # stay compatible with homeassistant_api which currently requires ^2.27.1",
]

[project.urls]
Homepage = "https://github.com/timohencken/GrowattPublicApiPy"
Issues = "https://github.com/timohencken/GrowattPublicApiPy/issues"

[tool.black]
line-length = 120
